--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>asd</title>
+	<title>sign in</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>	
 <body>
